# turk_panel

./: .dockerignore  .env  .env.example  AGENTS.md  CODE_REVIEW.md  Dockerfile  README.md  SESSION_CONTEXT.md  api.py  apify_api.py  crud.py  imap_utils.py  import_data.py  iproxy_utils.py  main.py  main_test.py  models.py  mtp_api.py  panel_api.py  pyproject.toml  requirements.txt  smm_panel_demo.db  test_mtp.py  test_panel.py  test_real_apify.py  worker.py
docs/: facebook-commenting-working-baseline.md  facebook-like-comment-working-baseline.md  facebook-reply-comment-working-baseline.md
docs/plans/: 2026-02-28-captcha-status-design.md  2026-02-28-captcha-status-plan.md  2026-03-07-cookie-normalization-design.md  2026-03-07-cookie-normalization-plan.md
templates/: index.html
tests/: test_api_hybrid.py  test_apify_api.py  test_apify_normalization.py  test_imap_utils.py  test_import_data.py  test_logic_comprehensive.py  test_main_test_flow.py  test_mtp_api.py  test_panel_api.py  test_parser_robustness.py  test_proxy_parsing.py  test_worker_actions.py
